Complete fixes for bearer tokens